--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,6 +1,7 @@
 Version 0.3.9.3.2 (alpha) (2012-06-04)
 - fixed error handling
 - improved native client activity
+- updated german translation
 
 Version 0.3.9.3.1 (alpha) (2012-06-03)
 - fixed bugs
