--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,8 @@
+Version 0.3.9.3.3 (alpha) (2012-06-05)
+- fixed error handling (channels)
+- fixed automatic installation and BAM syncing
+- minor bugs
+
 Version 0.3.9.3.2 (alpha) (2012-06-04)
 - fixed error handling
 - improved native client activity
