NativeBOINC: fixing LockScreenOn option (move wakelock to connection manager).

--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -87,7 +87,7 @@ jeszcze raz usprawnic i uszczelnić obsługę błędów
   * wprowadzić blokowanie przycisków gdy operacja sie wykonuje (nawet gdy nie została wywołana w aktynwości)
   * filtrowac listę dostepnyhc projektów wyrzucając wszystkie dołączone
   * wprowadzić wykonywanie wielu 'dump boinc files' równocześnie
-  * poprawić obsługę wakelocków dla 'keep screen' z preferences.
+/ * poprawić obsługę wakelocków dla 'keep screen' z preferences.
   * dodać blokowanie przycisku start/shutdown na widgecie przy startowaniu/wyłączaniu boinca 
 
 / * dostosować do Android 3.0 (opcjonalnie) i 4.0.
