NativeBOINC: filtering projectlist in ProjectListActivity. Improve always lock  screen on option.

--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -84,20 +84,12 @@ Na Teraz:
 przeprojektować obsługę zadań dla handlerów, tak by jedno zadanie jedno typu mogło tylko tylko kolejkowane
 jeszcze raz usprawnic i uszczelnić obsługę błędów
 
-  * wprowadzić blokowanie przycisków gdy operacja sie wykonuje (nawet gdy nie została wywołana w aktynwości)
-  * filtrowac listę dostepnyhc projektów wyrzucając wszystkie dołączone
+/ * wprowadzić blokowanie przycisków gdy operacja sie wykonuje (nawet gdy nie została wywołana w aktynwości)
+/ * filtrowac listę dostepnych projektów wyrzucając wszystkie dołączone
   * wprowadzić wykonywanie wielu 'dump boinc files' równocześnie
 / * poprawić obsługę wakelocków dla 'keep screen' z preferences.
   * dodać blokowanie przycisku start/shutdown na widgecie przy startowaniu/wyłączaniu boinca 
-
-/ * dostosować do Android 3.0 (opcjonalnie) i 4.0.
-
-Tablety:
-* zrobić layout głównego ekranu dla tabletów (splitview) (nie uzyteczne)
-* zrobic layout dla Preferences i ManageClient (wygląd jak w Android 3.0) (nie potrzebne?)
-/ * dodać nowy widget (większy z podglądem zadań)
-* zrobić ekran instalatora
-* .....
+  * WPROWADZ nowe tłumaczenia na język czeski
 
 następne wersje:
 * dodać obsługę screensavera.
