NativeBOINC: small fixes. remove disabling widget start/shutdown buttons when runner works (doesnt works with Honeycomb or ICS). update Czech translations.

--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -89,7 +89,7 @@ jeszcze raz usprawnic i uszczelnić obsługę błędów
   * wprowadzić wykonywanie wielu 'dump boinc files' równocześnie
 / * poprawić obsługę wakelocków dla 'keep screen' z preferences.
 / * dodać blokowanie przycisku start/shutdown na widgecie przy startowaniu/wyłączaniu boinca 
-  * WPROWADZ nowe tłumaczenia na język czeski
+/ * WPROWADZ nowe tłumaczenia na język czeski
 
 następne wersje:
 * dodać obsługę screensavera.
