--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -91,6 +91,12 @@ jeszcze raz usprawnic i uszczelnić obsługę błędów
 - * dodać blokowanie przycisku start/shutdown na widgecie przy startowaniu/wyłączaniu boinca 
 / * WPROWADZ nowe tłumaczenia na język czeski
 
+  * zrób wywoływanie aktywności aplikacji w notyfikacji tak, by nie tworzyło nowego taska, lecz nic nie robiło
+    gdy już jest wywołana aktywność.
+  * dodaj long scrolling do taba messages
+  * popraw błąd w ConnectionBridge:792 (NPE)
+  * 
+
 następne wersje:
 * dodać obsługę screensavera.
 
