--- a/src/NativeBOINC/TODO.txt
+++ b/src/NativeBOINC/TODO.txt
@@ -92,10 +92,9 @@ jeszcze raz usprawnic i uszczelnić obsługę błędów
 / * WPROWADZ nowe tłumaczenia na język czeski
 
   * zrób wywoływanie aktywności aplikacji w notyfikacji tak, by nie tworzyło nowego taska, lecz nic nie robiło
-    gdy już jest wywołana aktywność.
+    gdy już jest wywołana aktywność (rob tez tak, by automatycznie przełączał na nativeboinc).
   * dodaj long scrolling do taba messages
   * popraw błąd w ConnectionBridge:792 (NPE)
-  * 
 
 następne wersje:
 * dodać obsługę screensavera.
