--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,10 @@
+Version 0.3.9.7 (alpha) (2012-06-17)
+- fixed NullPointerException faults in the ClientBridge
+- removing finished progresses when progress activity starts
+- fixed notification actions
+- set up main activity as single task launched
+- improved tab views (you can select option by long click on empty place)
+
 Version 0.3.9.6.1 (alpha) (2012-06-17)
 - fixed long lines in the local preferences
 
