--- a/src/NativeBOINC/res/raw/changelog.txt
+++ b/src/NativeBOINC/res/raw/changelog.txt
@@ -1,3 +1,7 @@
+Version 0.3.9.7.1 (alpha) (2012-06-18)
+- fixed db handling (added important escaping)
+- improving NativeClientActivity
+
 Version 0.3.9.7 (alpha) (2012-06-18)
 - fixed NullPointerException faults in the ClientBridge
 - removing finished progresses when progress activity starts
